Bugfix #27585

Oldie: Texture buttons - "Add New Image" - crashes on changing X or Y resolution.

I've greyed out these buttons now, changing image memory that's in use by the
preview render is not supported.

A real fix I did was assigning the new image to the texture, that was missing.